// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataTableHeader.ts desktop should render 1`] = `
<thead class="v-data-table-header">
  <tr>
    <th role="columnheader"
        scope="col"
        aria-label="Dessert (100g serving)"
        class="text-left"
    >
      <span>
        Dessert (100g serving)
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Calories: Not sorted. Activate to sort ascending."
        style="width: 50px; min-width: 50px;"
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Calories
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Fat (g): Not sorted. Activate to sort ascending."
        style="width: 50em; min-width: 50em;"
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Fat (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Carbs (g): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Carbs (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Protein (g): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Protein (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Iron (%): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Iron (%)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
  </tr>
</thead>
`;

exports[`VDataTableHeader.ts desktop should work with multiSort 1`] = `
<thead class="v-data-table-header">
  <tr>
    <th role="columnheader"
        scope="col"
        aria-label="Dessert (100g serving)"
        class="text-left"
    >
      <span>
        Dessert (100g serving)
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Calories: Not sorted. Activate to sort ascending."
        style="width: 50px; min-width: 50px;"
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Calories
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Fat (g): Not sorted. Activate to sort ascending."
        style="width: 50em; min-width: 50em;"
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Fat (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Carbs (g): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Carbs (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Protein (g): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Protein (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Iron (%): Sorted descending. Activate to remove sorting."
        class="text-start sortable active desc"
        aria-sort="descending"
    >
      <span>
        Iron (%)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
      <span class="v-data-table-header__sort-badge">
        1
      </span>
    </th>
  </tr>
</thead>
`;

exports[`VDataTableHeader.ts desktop should work with showGroupBy 1`] = `
<thead class="v-data-table-header">
  <tr>
    <th role="columnheader"
        scope="col"
        aria-label="Dessert (100g serving)"
        class="text-left"
    >
      <span>
        Dessert (100g serving)
      </span>
      <span>
        group
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Calories: Not sorted. Activate to sort ascending."
        style="width: 50px; min-width: 50px;"
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Calories
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
      <span>
        group
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Fat (g): Not sorted. Activate to sort ascending."
        style="width: 50em; min-width: 50em;"
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Fat (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
      <span>
        group
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Carbs (g): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Carbs (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
      <span>
        group
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Protein (g): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Protein (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
      <span>
        group
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Iron (%): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Iron (%)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
      <span>
        group
      </span>
    </th>
  </tr>
</thead>
`;

exports[`VDataTableHeader.ts desktop should work with sortBy correctly 1`] = `
<thead class="v-data-table-header">
  <tr>
    <th role="columnheader"
        scope="col"
        aria-label="Dessert (100g serving)"
        class="text-left"
    >
      <span>
        Dessert (100g serving)
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Calories: Not sorted. Activate to sort ascending."
        style="width: 50px; min-width: 50px;"
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Calories
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Fat (g): Not sorted. Activate to sort ascending."
        style="width: 50em; min-width: 50em;"
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Fat (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Carbs (g): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Carbs (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Protein (g): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Protein (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Iron (%): Sorted descending. Activate to remove sorting."
        class="text-start sortable active desc"
        aria-sort="descending"
    >
      <span>
        Iron (%)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
  </tr>
</thead>
`;

exports[`VDataTableHeader.ts desktop should work with sortDesc correctly 1`] = `
<thead class="v-data-table-header">
  <tr>
    <th role="columnheader"
        scope="col"
        aria-label="Dessert (100g serving)"
        class="text-left"
    >
      <span>
        Dessert (100g serving)
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Calories: Not sorted. Activate to sort ascending."
        style="width: 50px; min-width: 50px;"
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Calories
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Fat (g): Not sorted. Activate to sort ascending."
        style="width: 50em; min-width: 50em;"
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Fat (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Carbs (g): Sorted descending. Activate to remove sorting."
        class="text-start sortable active desc"
        aria-sort="descending"
    >
      <span>
        Carbs (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Protein (g): Not sorted. Activate to sort ascending."
        class="text-start sortable"
        aria-sort="none"
    >
      <span>
        Protein (g)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Iron (%): Sorted ascending. Activate to sort descending."
        class="text-start sortable active asc"
        aria-sort="ascending"
    >
      <span>
        Iron (%)
      </span>
      <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
         aria-hidden="true"
         style="font-size: 18px;"
      >
        $sort
      </i>
    </th>
  </tr>
</thead>
`;

exports[`VDataTableHeader.ts mobile should render 1`] = `
<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th>
      <div class="v-data-table-header-mobile__wrapper">
        <div class="v-input v-input--hide-details theme--light v-text-field v-select">
          <div class="v-input__control">
            <div role="button"
                 aria-haspopup="listbox"
                 aria-expanded="false"
                 aria-owns="list-43"
                 class="v-input__slot"
            >
              <div class="v-select__slot">
                <label class="v-label theme--light"
                       for="input-43"
                       aria-hidden="false"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <input aria-readonly="false"
                         autocomplete="off"
                         id="input-43"
                         readonly
                         type="text"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i class="v-icon notranslate material-icons theme--light"
                       aria-hidden="true"
                    >
                      $dropdown
                    </i>
                  </div>
                </div>
                <input type="hidden">
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`VDataTableHeader.ts mobile should render with data-table-select header 1`] = `
<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th>
      <div class="v-data-table-header-mobile__wrapper">
        <div class="v-data-table-header-mobile__select">
          <div class="v-simple-checkbox v-data-table__checkbox v-data-table__checkbox">
            <div class="v-input--selection-controls__input">
              <i class="v-icon notranslate material-icons theme--light"
                 aria-hidden="true"
              >
                $checkboxOff
              </i>
              <div class="v-input--selection-controls__ripple">
              </div>
            </div>
          </div>
        </div>
        <div class="v-input v-input--hide-details theme--light v-text-field v-select">
          <div class="v-input__control">
            <div role="button"
                 aria-haspopup="listbox"
                 aria-expanded="false"
                 aria-owns="list-86"
                 class="v-input__slot"
            >
              <div class="v-select__slot">
                <label class="v-label theme--light"
                       for="input-86"
                       aria-hidden="false"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <input aria-readonly="false"
                         autocomplete="off"
                         id="input-86"
                         readonly
                         type="text"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i class="v-icon notranslate material-icons theme--light"
                       aria-hidden="true"
                    >
                      $dropdown
                    </i>
                  </div>
                </div>
                <input type="hidden">
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`VDataTableHeader.ts mobile should work with multiSort 1`] = `
<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th>
      <div class="v-data-table-header-mobile__wrapper">
        <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-select--is-multi">
          <div class="v-input__control">
            <div role="button"
                 aria-haspopup="listbox"
                 aria-expanded="false"
                 aria-owns="list-57"
                 class="v-input__slot"
            >
              <div class="v-select__slot">
                <label class="v-label v-label--active theme--light"
                       for="input-57"
                       aria-hidden="false"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <span class="v-chip v-chip--clickable v-chip--no-color theme--light v-size--default sortable">
                    <span class="v-chip__content">
                      Iron (%)
                      <div class="v-chip__close sortable active desc">
                        <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
                           aria-hidden="true"
                           style="font-size: 18px;"
                        >
                          $sort
                        </i>
                      </div>
                    </span>
                  </span>
                  <input aria-readonly="false"
                         autocomplete="off"
                         id="input-57"
                         readonly
                         type="text"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i class="v-icon notranslate material-icons theme--light"
                       aria-hidden="true"
                    >
                      $dropdown
                    </i>
                  </div>
                </div>
                <input type="hidden"
                       value="iron"
                >
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`VDataTableHeader.ts mobile should work with showGroupBy 1`] = `
<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th>
      <div class="v-data-table-header-mobile__wrapper">
        <div class="v-input v-input--hide-details theme--light v-text-field v-select">
          <div class="v-input__control">
            <div role="button"
                 aria-haspopup="listbox"
                 aria-expanded="false"
                 aria-owns="list-50"
                 class="v-input__slot"
            >
              <div class="v-select__slot">
                <label class="v-label theme--light"
                       for="input-50"
                       aria-hidden="false"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <input aria-readonly="false"
                         autocomplete="off"
                         id="input-50"
                         readonly
                         type="text"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i class="v-icon notranslate material-icons theme--light"
                       aria-hidden="true"
                    >
                      $dropdown
                    </i>
                  </div>
                </div>
                <input type="hidden">
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`VDataTableHeader.ts mobile should work with sortBy correctly 1`] = `
<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th>
      <div class="v-data-table-header-mobile__wrapper">
        <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
          <div class="v-input__control">
            <div role="button"
                 aria-haspopup="listbox"
                 aria-expanded="false"
                 aria-owns="list-66"
                 class="v-input__slot"
            >
              <div class="v-select__slot">
                <label class="v-label v-label--active theme--light"
                       for="input-66"
                       aria-hidden="false"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <span class="v-chip v-chip--clickable v-chip--no-color theme--light v-size--default sortable">
                    <span class="v-chip__content">
                      Iron (%)
                      <div class="v-chip__close sortable active desc">
                        <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
                           aria-hidden="true"
                           style="font-size: 18px;"
                        >
                          $sort
                        </i>
                      </div>
                    </span>
                  </span>
                  <input aria-readonly="false"
                         autocomplete="off"
                         id="input-66"
                         readonly
                         type="text"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i class="v-icon notranslate material-icons theme--light"
                       aria-hidden="true"
                    >
                      $dropdown
                    </i>
                  </div>
                </div>
                <input type="hidden"
                       value="iron"
                >
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`VDataTableHeader.ts mobile should work with sortDesc correctly 1`] = `
<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th>
      <div class="v-data-table-header-mobile__wrapper">
        <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
          <div class="v-input__control">
            <div role="button"
                 aria-haspopup="listbox"
                 aria-expanded="false"
                 aria-owns="list-75"
                 class="v-input__slot"
            >
              <div class="v-select__slot">
                <label class="v-label v-label--active theme--light"
                       for="input-75"
                       aria-hidden="false"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <span class="v-chip v-chip--clickable v-chip--no-color theme--light v-size--default sortable">
                    <span class="v-chip__content">
                      Iron (%)
                      <div class="v-chip__close sortable active asc">
                        <i class="v-icon notranslate material-icons theme--light v-data-table-header__icon"
                           aria-hidden="true"
                           style="font-size: 18px;"
                        >
                          $sort
                        </i>
                      </div>
                    </span>
                  </span>
                  <input aria-readonly="false"
                         autocomplete="off"
                         id="input-75"
                         readonly
                         type="text"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i class="v-icon notranslate material-icons theme--light"
                       aria-hidden="true"
                    >
                      $dropdown
                    </i>
                  </div>
                </div>
                <input type="hidden"
                       value="iron"
                >
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;
